# otus-cpp-editor

./: .gitignore  CMakeLists.txt  Doxyfile  README.md  annotated.html  annotated_dup.js  button_8h.html  button_8h.js  button_8h__dep__incl.map  button_8h__dep__incl.md5  button_8h__incl.map  button_8h__incl.md5  button_8h_source.html  circle_8h.html  circle_8h.js  circle_8h__incl.map  circle_8h__incl.md5  circle_8h_source.html  classes.html  classotus__editor_1_1_a_observable-members.html  classotus__editor_1_1_a_observable.html  classotus__editor_1_1_a_observable.js  classotus__editor_1_1_a_observable__coll__graph.map  classotus__editor_1_1_a_observable__coll__graph.md5  classotus__editor_1_1_a_observable__inherit__graph.map  classotus__editor_1_1_a_observable__inherit__graph.md5  classotus__editor_1_1_a_primitive-members.html  classotus__editor_1_1_a_primitive.html  classotus__editor_1_1_a_primitive.js  classotus__editor_1_1_a_primitive__coll__graph.map  classotus__editor_1_1_a_primitive__coll__graph.md5  classotus__editor_1_1_a_primitive__inherit__graph.map  classotus__editor_1_1_a_primitive__inherit__graph.md5  classotus__editor_1_1_c_button-members.html  classotus__editor_1_1_c_button.html  classotus__editor_1_1_c_button.js  classotus__editor_1_1_c_button__inherit__graph.map  classotus__editor_1_1_c_button__inherit__graph.md5  classotus__editor_1_1_c_circle-members.html  classotus__editor_1_1_c_circle.html  (+261 more)
.github/workflows/: release.yml
docs/: otus_editor.plantuml
include/canvas/: graphcanvas.h  icanvas.h  pseudocanvas.h
include/common/: color.h  iobserver.h  observable.h
search/: all_0.js  all_10.js  all_2.js  all_5.js  all_6.js  all_8.js  all_9.js  all_a.js  all_b.js  all_c.js  all_d.js  all_e.js  classes_0.js  classes_1.js  classes_2.js  enums_0.js  enumvalues_0.js  files_1.js  files_2.js  files_3.js  functions_0.js  functions_1.js  functions_2.js  functions_3.js  functions_5.js  functions_6.js  pages_0.js  searchdata.js  variables_0.js
(+22 files in other folders)
